@@ -41,3 +41,5 @@ SOURCE_PREFIX: $(TARGET_OS)
 COPY_IGNORE_PATTERNS:
     - ".svn"
     - "*.done"
+
+RSYNC_PERM_OPTIONS: --perms --chmod=a+rw,+X
