@@ -102,49 +102,53 @@ class CopyToolRsync(CopyToolBase):
         if src_dir.endswith("/"):
             src_dir.rstrip("/")
         ignore_spec = self.create_ignore_spec(ignore)
+        permissions_spec = var_stack.resolve("$(RSYNC_PERM_OPTIONS)", default="")
         if link_dest:
             the_link_dest = os.path.join(src_dir, "..")
-            sync_command = "rsync --owner --group -l -r -E --delete {ignore_spec} --link-dest=\"{the_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E --delete {ignore_spec} --link-dest=\"{the_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -r -E --delete {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E --delete {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
 
         return sync_command
 
     def copy_file_to_dir(self, src_file, trg_dir, link_dest=False, ignore=None):
         assert not src_file.endswith("/")
         ignore_spec = self.create_ignore_spec(ignore)
+        permissions_spec = var_stack.resolve("$(RSYNC_PERM_OPTIONS)", default="")
         if link_dest:
             the_link_dest, src_file_name = os.path.split(src_file)
             relative_link_dest = os.path.relpath(the_link_dest, trg_dir)
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_file}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_file}\" \"{trg_dir}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} \"{src_file}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {ignore_spec} \"{src_file}\" \"{trg_dir}\"".format(**locals())
         return sync_command
 
     def copy_file_to_file(self, src_file, trg_file, link_dest=False, ignore=None):
         assert not src_file.endswith("/")
         ignore_spec = self.create_ignore_spec(ignore)
+        permissions_spec = var_stack.resolve("$(RSYNC_PERM_OPTIONS)", default="")
         if link_dest:
             src_folder_name, src_file_name = os.path.split(src_file)
             trg_folder_name, trg_file_name = os.path.split(trg_file)
             relative_link_dest = os.path.relpath(src_folder_name, trg_folder_name)
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_file}\" \"{trg_file}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_file}\" \"{trg_file}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -r -E {ignore_spec} \"{src_file}\" \"{trg_file}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {ignore_spec} \"{src_file}\" \"{trg_file}\"".format(**locals())
         return sync_command
 
     def copy_dir_contents_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None, preserve_dest_files=True):
         if not src_dir.endswith("/"):
             src_dir += "/"
         ignore_spec = self.create_ignore_spec(ignore)
+        permissions_spec = var_stack.resolve("$(RSYNC_PERM_OPTIONS)", default="")
         delete_spec = ""
         if not preserve_dest_files:
             delete_spec = "--delete"
         if link_dest:
             relative_link_dest = os.path.relpath(src_dir, trg_dir)
-            sync_command = "rsync --owner --group -l -r -E {delete_spec} {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {delete_spec} {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -r -E {delete_spec} {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -r -E {delete_spec} {ignore_spec} \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         return sync_command
 
     def copy_dir_files_to_dir(self, src_dir, trg_dir, link_dest=False, ignore=None):
@@ -152,11 +156,12 @@ class CopyToolRsync(CopyToolBase):
             src_dir += "/"
         # in order for * to correctly expand, it must be outside the quotes, e.g. to copy all files in folder a: A=a ; "${A}"/* and not "${A}/*"
         ignore_spec = self.create_ignore_spec(ignore)
+        permissions_spec = var_stack.resolve("$(RSYNC_PERM_OPTIONS)")
         if link_dest:
             relative_link_dest = os.path.relpath(src_dir, trg_dir)
-            sync_command = "rsync --owner --group -l -E -d --exclude='*/' {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -E -d --exclude='*/' {ignore_spec} --link-dest=\"{relative_link_dest}\" \"{src_dir}\" \"{trg_dir}\"".format(**locals())
         else:
-            sync_command = "rsync --owner --group -l -E -d --exclude='*/' {ignore_spec} \"{src_dir}\"/* \"{trg_dir}\"".format(**locals())
+            sync_command = "rsync {permissions_spec} --owner --group -l -E -d --exclude='*/' {ignore_spec} \"{src_dir}\"/* \"{trg_dir}\"".format(**locals())
 
         return sync_command
 
