@@ -4,6 +4,9 @@
     * Added verify-repo to gui mode.
     * Gui mode: the run checkbox is disabled for commands that do not accept --run.
     * New command fix-perm will attempt to fix permissions on stage folder before wtar and stage2svn.
+    * Added help for fix-perm command.
+    * wtar command now accepts the --limit option.
+    * wtar command removes .DS_Store files before doing the actual wtarring.
 
     programmer visible changes:
     * Extended the number of variable name endings that, when read, call os.path.normpath on the value:  "_PATH", "_DIR", "_DIR_NAME", "_FILE_NAME", "_PATH__", "_DIR__", "_DIR_NAME__", "_FILE_NAME__".
@@ -16,6 +19,10 @@
 
     user visible changes, client:
     * New interactive command which prints the path to currently running instl
+    * During copy, on Mac OS, rsync will set permissions according to variable RSYNC_PERM_OPTIONS.  Default value is --perms --chmod=a+rw,+X.
+
+
+
 
 31/5/2015 0.10.0.6
 
